# genai_poc

./: README.md
langchain_rag_app/: comparing_embeddings.py  main.py  pyproject.toml  query_data.py
ollama_rag_locally/: readme.md
rag_evaluation/: .env.example  README.md  evaluate-with-ragas.py  pyproject.toml
