[project]
name = "rag-evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.0.0",
    "faiss-cpu>=1.11.0.post1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.3.5",
    "numpy>=2.3.1",
    "openai>=1.97.0",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "ragas>=0.3.0",
]
